--- a/css/main.css
+++ b/css/main.css
@@ -1,198 +1,101 @@
-/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
+* {
+  box-sizing: border-box;
+  margin: 0; }
 
-html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-}
+h1, h2 {
+  font-family: 'Quattrocento', serif; }
 
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
+body {
+  width: 100%;
+  color: #2c045c;
+  font-size: 16px;
+  font-family: 'Merriweather Sans', sans-serif;
+  background-color: #f0fafd; }
 
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
+header {
+  background-color: #47BDE4; }
+  header h1 {
+    color: #4F07A5;
+    padding: 0.25em; }
+  header ul {
+    padding: 0; }
+    header ul li {
+      width: 25%;
+      display: table-cell;
+      vertical-align: middle;
+      text-align: center;
+      padding: 0.5em; }
 
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
+section {
+  padding: 0 0.75em 0.5em; }
+  section h1 {
+    padding: .25em 0 .5em;
+    font-size: 1.5em;
+    color: #8BC700; }
+  section p {
+    padding: 0.25em;
+    line-height: 1.5em; }
+  section a {
+    color: #4F07A5; }
+  section a:visited {
+    color: #446100; }
 
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-    vertical-align: middle;
-}
+.project {
+  padding: 1em; }
+  .project h2 {
+    padding: 0.25em 0;
+    font-size: 1.25em; }
+  .project img {
+    width: 100%;
+    padding: 0 10%; }
+  .project p {
+    padding-left: 15%; }
 
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
+footer {
+  background-color: #47BDE4; }
+  footer nav {
+    padding: 1em 0; }
+    footer nav li {
+      display: inline-block;
+      border-left: 1px solid #1987ac;
+      padding: 0 0.5em; }
+    footer nav a {
+      text-decoration: none; }
 
-textarea {
-    resize: vertical;
-}
+.contact-button {
+  display: block;
+  text-align: center;
+  font: 1.25em 'Quattrocento', serif;
+  padding: 0.25em;
+  margin: 0 20%;
+  width: 60%;
+  background-color: #8BC700;
+  color: #4F07A5;
+  text-decoration: none;
+  border-radius: 2px; }
 
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
+.contact-button:visited {
+  color: #4F07A5; }
 
+.social-media {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 16px;
+  height: 64px;
+  width: 64px;
+  border-radius: 50%;
+  background-color: #8BC700;
+  margin: 0.25em; }
 
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
+@media screen and (min-width: 500px) {
+  body {
+    font-size: 22px; } }
 
+@media screen and (min-width: 800px) {
+  section {
+    max-width: 70%;
+    margin: 0 15%; } }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-
-}
-
-@media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
-
-}
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-.invisible {
-    visibility: hidden;
-}
-
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-.clearfix {
-    *zoom: 1;
-}
-
-/* ==========================================================================
-   Print styles
-   ========================================================================== */
-
-@media print {
-    *,
-    *:before,
-    *:after {
-        background: transparent !important;
-        color: #000 !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
-}
+@media screen and (min-width: 1900px) {
+  body {
+    font-size: 28px; } }
