--- a/css/main.scss
+++ b/css/main.scss
@@ -38,7 +38,7 @@ header {
 }
 
 section {
-  padding: 0 0.75em 0.5em;
+  padding: 1em 0.75em;
   h1 {
     padding: .25em 0 .5em;
     font-size: 1.5em;
@@ -94,7 +94,7 @@ footer {
   text-align: center;
   font: 1.25em 'Quattrocento', serif;
   padding: 0.25em;
-  margin: 0 20%;
+  margin: 3% 20%;
   width: 60%;
   background-color: $pistachio;
   color: $purple;
@@ -123,10 +123,10 @@ footer {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 750px) {
   section {
-    max-width: 70%;
-    margin: 0 15%;
+    max-width: 750px;
+    margin: auto;
   }
 }
 
