--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ h1, h2 {
 
 body {
   width: 100%;
-  color: #1d002c;
+  color: #2b333c;
   font-size: 16px;
   font-family: 'Merriweather Sans', sans-serif;
   background-color: white; }
@@ -60,6 +60,7 @@ footer {
       border-left: 1px solid #9966ff;
       padding: 0 0.5em; }
     footer nav a {
+      color: #500078;
       text-decoration: none; }
 
 .contact-button {
@@ -69,7 +70,7 @@ footer {
   padding: 0.25em;
   margin: 3% 20%;
   width: 60%;
-  background-color: #556677;
+  background-color: #ddccff;
   color: #500078;
   text-decoration: none;
   border-radius: 2px; }
@@ -84,7 +85,7 @@ footer {
   height: 64px;
   width: 64px;
   border-radius: 50%;
-  background-color: #556677;
+  background-color: #ddccff;
   margin: 0.25em; }
 
 @media screen and (min-width: 500px) {
